; ModuleID = '/home/carl/AnghaBench/redis/src/extr_redis-benchmark.c_randomizeClientKey.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_redis-benchmark.c_randomizeClientKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }
%struct.TYPE_4__ = type { i64, i8** }

@config = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @randomizeClientKey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @randomizeClientKey(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  store i64 0, i64* %3, align 8
  br label %7

7:                                                ; preds = %45, %1
  %8 = load i64, i64* %3, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ult i64 %8, %11
  br i1 %12, label %13, label %48

13:                                               ; preds = %7
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 1
  %16 = load i8**, i8*** %15, align 8
  %17 = load i64, i64* %3, align 8
  %18 = getelementptr inbounds i8*, i8** %16, i64 %17
  %19 = load i8*, i8** %18, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 11
  store i8* %20, i8** %4, align 8
  store i64 0, i64* %5, align 8
  %21 = load i64, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @config, i32 0, i32 0), align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %13
  %24 = call i64 (...) @random()
  %25 = load i64, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @config, i32 0, i32 0), align 8
  %26 = urem i64 %24, %25
  store i64 %26, i64* %5, align 8
  br label %27

27:                                               ; preds = %23, %13
  store i64 0, i64* %6, align 8
  br label %28

28:                                               ; preds = %41, %27
  %29 = load i64, i64* %6, align 8
  %30 = icmp ult i64 %29, 12
  br i1 %30, label %31, label %44

31:                                               ; preds = %28
  %32 = load i64, i64* %5, align 8
  %33 = urem i64 %32, 10
  %34 = add i64 48, %33
  %35 = trunc i64 %34 to i8
  %36 = load i8*, i8** %4, align 8
  store i8 %35, i8* %36, align 1
  %37 = load i64, i64* %5, align 8
  %38 = udiv i64 %37, 10
  store i64 %38, i64* %5, align 8
  %39 = load i8*, i8** %4, align 8
  %40 = getelementptr inbounds i8, i8* %39, i32 -1
  store i8* %40, i8** %4, align 8
  br label %41

41:                                               ; preds = %31
  %42 = load i64, i64* %6, align 8
  %43 = add i64 %42, 1
  store i64 %43, i64* %6, align 8
  br label %28

44:                                               ; preds = %28
  br label %45

45:                                               ; preds = %44
  %46 = load i64, i64* %3, align 8
  %47 = add i64 %46, 1
  store i64 %47, i64* %3, align 8
  br label %7

48:                                               ; preds = %7
  ret void
}

declare dso_local i64 @random(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
